fix: update selector for google on ios safari.

--- a/userstyles/modify-font.user.css
+++ b/userstyles/modify-font.user.css
@@ -1,7 +1,7 @@
 /* ==UserStyle==
 @name modify-font
 @namespace vicchow
-@version 40.0.1
+@version 40.0.2
 ==/UserStyle== */
 
 /*
@@ -109,6 +109,7 @@
   a,
   button,
   input,
+  input.gLFyf,
   p,
   td {
     font-family: "Google Sans Text", var(--font-family-sans-serif);
